# AndroidGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  gradle.properties
app/: build.gradle
app/src/androidTest/java/com/example/androidgameengine/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/atv/: ATV.3DS
app/src/main/assets/shaders/: ARCameraBackground.frag  ARCameraBackground.vert  ARPlane.frag  ARPlane.vert  ARPlaneShadowed.frag  ARPlaneShadowed.vert  Default.frag  Default.vert  ImageMsgDisplay.frag  ImageMsgDisplay.vert  PhysicsDebug.frag  PhysicsDebug.vert  ShadowMap.frag  ShadowMap.vert  Skybox.frag  Skybox.vert  Widget.frag  Widget.vert  default.frag  default.vert  skybox.frag
app/src/main/cpp/: CMakeLists.txt  ImageMsgDisplay.cpp  ImageMsgDisplay.h  MobileControlStation.cpp  MobileControlStation.h  TestGame.cpp  TestGame.h  TestGameAR.cpp  TestGameAR.h  jniMain.cpp  jniTestGame.cpp  jniTestGame.h  main.cpp  nativeMain.cpp  nativeTestGame.cpp  nativeTestGame.h
app/src/main/cpp/android_game_engine/: CMakeLists.txt
app/src/main/cpp/android_game_engine/android_game_engine/: CMakeLists.txt
app/src/main/cpp/android_game_engine/android_game_engine/include/android_game_engine/: ARCameraBackground.h  ARPlane.h  ARPlaneCircle.h  Asset.h  Box.h  Camera.h  CameraChase.h  CameraFPV.h  DirectionalLight.h  ElementBufferObject.h  Exception.h  Game.h  GameAR.h  GameEngine.h  GameEngineJNI.h  GameEngineJNI_impl.h  GameEngineNative.h  GameEngineNative_impl.h  GameEngine_impl.h  GameObject.h  Joystick.h  JoystickHandle.h  Light.h  Log.h  ManagerAssets.h  ManagerWindowing.h  Mesh.h  Model.h  ModelLoader.h  ModelLoader3ds.h  MotionEvent.h  PhysicsCompoundShape.h  PhysicsDebugDrawer.h  PhysicsEngine.h  PhysicsEngineBullet.h  PhysicsMotionState.h  PhysicsRigidBody.h  Quad.h  Quadcopter.h  ShaderProgram.h  (+10 more)
app/src/main/cpp/android_game_engine/android_game_engine/src/: ARCameraBackground.cpp  ARPlane.cpp  ARPlaneCircle.cpp  Box.cpp  Camera.cpp  CameraChase.cpp  CameraFPV.cpp  DirectionLight.cpp  ElementBufferObject.cpp  Game.cpp  GameAR.cpp  GameObject.cpp  Joystick.cpp  JoystickHandle.cpp  LightDirectional.cpp  Log.cpp  ManagerAssets.cpp  ManagerWindowing.cpp  Mesh.cpp  Model.cpp  ModelLoader3ds.cpp  PhysicsDebugDrawer.cpp  PhysicsEngine.cpp  PhysicsEngineBullet.cpp  PhysicsMotionState.cpp  PhysicsRigidBody.cpp  Quad.cpp  Quadcopter.cpp  ShaderProgram.cpp  ShadowMap.cpp  Skybox.cpp  Texture2D.cpp  Vehicle.cpp  VertexArray.cpp  VertexBufferObject.cpp  Widget.cpp  Window.cpp
app/src/main/cpp/android_game_engine/bullet3/: CMakeLists.txt
app/src/main/cpp/android_game_engine/glm/: CMakeLists.txt
app/src/main/cpp/android_game_engine/include/android_game_engine/: ARPlane.h  AssimpIOSystem.h  Game.h  GameAR.h  GameEngine.h  GameEngineJNI.h  GameEngineJNI_impl.h  GameObject.h  GameTemplate.h  JNIInterface.h  ManagerAssets.h  ManagerJNI.h  ManagerWindowing.h  Mesh.h  Model.h  ShaderProgram.h  Skybox.h  UniformBuffer.h  VertexArray.h
app/src/main/cpp/android_game_engine/src/: ARCameraBackground.cpp  Asset.cpp  Camera.cpp  Game.cpp  GameAR.cpp  GameEngine.cpp  GameObject.cpp  GameTemplate.cpp  JNIInterface.cpp  ManagerAssets.cpp  ManagerJNI.cpp  ManagerWindowing.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  ModelLoader3ds.cpp  PID.cpp  PhysicsDebugDrawer.cpp  Shader.cpp  ShaderProgram.cpp  Texture2D.cpp  UniformBuffer.cpp  VertexArray.cpp
app/src/main/cpp/cmake/: FindARCORE.cmake  GetAssimp.cmake  GetBullet3.cmake  GetGLM.cmake  GetNetwork.cmake  GetSTB.cmake
app/src/main/cpp/src/: CMakeLists.txt
app/src/main/cpp/src/android_game_engine/: AssimpIOStream.cpp  AssimpIOSystem.cpp  CMakeLists.txt  Game.cpp  Light.cpp  PhysicsCompoundShape.cpp  PhysicsEngine.cpp  Quadcopter.cpp  ShaderProgram.cpp  Skybox.cpp  Utilities.cpp  Vertex.cpp
app/src/main/cpp/src/android_game_engine/include/android_game_engine/: Asset.h  AssimpIOStream.h  CameraFPV.h  Exception.h  Game.h  GameEngine.h  LightDirectional.h  ManagerWindowing.h  PID.h  PhysicsMotionState.h  Quadcopter.h  Shader.h  Utilities.h  Vehicle.h  Vertex.h
app/src/main/cpp/src/game/: CMakeLists.txt  TestGame.h
app/src/main/cpp/src/game_activity/: CMakeLists.txt  GameActivity.cpp  GameActivity.h
app/src/main/cpp/src/game_activity_ar/: CMakeLists.txt  GameActivityAR.cpp  GameActivityAR.h
app/src/main/cpp/src/mobile_control_station/: CMakeLists.txt  ImageMsgDisplay.cpp  MobileControlStation.cpp  MobileControlStation.h
app/src/main/java/com/example/androidgameengine/: CameraPermissionHelper.java  CameraPermissionHelper.kt  GameActivity.java  GameActivity.kt  GameActivityAR.java  GameActivityAR.kt  GameJNI.java  Joystick.java  Joystick.kt  MobileControlStation.kt  MobileControlStationActivity.java
app/src/main/res/layout/: activity_game.xml  activity_mobile_control_station.xml  ar_activity_game.xml  station_control_mobile.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
app/src/test/java/com/example/androidgameengine/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
include/geometry_msgs/: Twist_generated.h  Vector3_generated.h
include/network/: Compression.h  Node.h  TcpPublisher.h  TcpPublisher_impl.h  TcpSubscriber.h  TcpSubscriber_impl.h  ThreadGuard.h
include/network/msgs/: Image_generated.h  Uint8Array_generated.h  Vector3_generated.h
include/std_msgs/: Header_generated.h  MessageControl_generated.h  Uint8Array_generated.h
schema/: Image.fbs  MsgCtrl.fbs
schema/geometry_msgs/: Twist.fbs
schema/sensor_msgs/: Joy.fbs
schema/std_msgs/: Header.fbs
src/: Compression.cpp  Node.cpp  Rate.cpp  TcpPublisher.cpp  TcpSubscriber.cpp  ThreadGuard.cpp
